<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16sp"
    android:layout_marginLeft="16sp"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/spinnerFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="15sp"
                android:entries="@array/spinnerFilter" />

            <TextView
                android:id="@+id/tvTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="18sp"
                android:fontFamily="@font/archivo_narrow_bold"
                android:text="@string/list_of_products_of_when_each_product_sales_ends_at"
                android:textColor="#000000"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/spinnerFunction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:entries="@array/spinnerFunction" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="15sp"
                android:fontFamily="@font/archivo_narrow_bold"
                android:text="@string/select_a_expiry_date_for_the_product"
                android:textColor="#000000"
                android:textSize="18sp" />

            <DatePicker
                android:id="@+id/datepicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:gravity="center" />


            <EditText
                android:id="@+id/etProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="15sp"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etProductDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:ems="10"
                android:inputType="textPersonName" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#2196F3"
                    android:text="@string/add" />

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#36A1D4"
                    android:text="@string/update" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#EA2618"
                    android:text="@string/delete" />


            </LinearLayout>

            <ListView
                android:id="@+id/listViewProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#7BC7EA" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
